Etiquetas del blog

--- a/root/index.html
+++ b/root/index.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<title>Formula 1</title>
+           <body></body>
+<p>
+  <!-- inicia tema 1 de Emiliano Núñez Pantoja -->
+
+<hgroup>
+    <h1>  Blog "Formula 1"  </h1>
+   </hgroup>
+   
+   <!-- termina tema 1 de Emiliano Núñez Pantoja -->  
+</p>
+
+<p>
+<!-- inicia tema 2 de Emiliano Núñez Pantoja -->
+
+<hgroup>
+    <h1>  Datos curiosos de la Formula 1  </h1>
+    </hgroup> 
+</p>
