Correción de errores

--- a/root/index.html
+++ b/root/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<title>Formula 1</title>
-           <body></body>
-<p>
-  <!-- inicia tema 1 de Emiliano Núñez Pantoja -->
+<html lang="es">
+    <head>
+        <title> Formula 1</title>
+    </head>
+    <body>
+        <!-- Tema 1 Emiliano Núñez Pantoja -->
+        <hgrupo>
+            <h1> Blog de la Formula 1 </h1>
+            <h3> Lo mas nuevo de la Formula 1 </h3>
+        </hgrupo>
+        <p>
+            Lo mas nuevo de la Formula 1, y datos muy importantes en el mundo del automovilismo 
+        </p>
+        <!--Termina Tema 1 Emiliano Núñez Pantoja-->
 
-<hgroup>
-    <h1>  Blog "Formula 1"  </h1>
-   </hgroup>
-   
-   <!-- termina tema 1 de Emiliano Núñez Pantoja -->  
-</p>
-
-<p>
-<!-- inicia tema 2 de Emiliano Núñez Pantoja -->
-
-<hgroup>
-    <h1>  Datos curiosos de la Formula 1  </h1>
-    </hgroup> 
-</p>
+        <!--Tema 2 Emiliano Núñez Pantoja -->
+        <hgroup> 
+            <h1> Diseños de los carros Formula 1</h1>
+        </hgroup>
+        <p>
+            Los carros de Formula 1 tienes que cambiar cad cierto tiempo el diseño de su auto
+        </p>
+        <!--Termina Tema 2 Emiliano Núñez Pantoja -->
+    </body>
+</html>
