--- a/root/propuestas.html
+++ b/root/propuestas.html
@@ -1,17 +1,29 @@
-<title>Propuestas del Blog</title>
-    <body></body>
-<!-- inicia tema 1 de JOHAN PINEDA AYALA -->
+<!DOCTYPE html>
+<html lang="es">
 
-<hgroup>
-    <h1> Blog sobre la Formula 1     </h1>
-</hgroup>
-<!-- termina tema 1 de JOHAN PINEDA AYALA -->
-<p>                                   </p>
+    <head>
+        <title> Popuestas del blog </title>
+    </head>
 
-<!-- inicia tema 2 de JOHAN PINEDA AYALA -->
+    <body>
+        <!-- Inicio de tema 1 Johan Pineda Ayala -->
+        <hgrupo>
+         <h1> Blog sobre la Formula 1 </h1>   
+        </hgrupo>
 
-<hgroup>
-    <h1>Blog sobre el Skate           </h1>
-</hgroup>
-<!--termina tema 2 de JOHAN PINEDA AYALA -->
-<p>                                   </p> 
+        <p>
+            Las cosas mas emocionantes de la Formula 1
+        </p>
+
+        <!-- Termina tema 1 Johan Pineda Ayala -->
+        <hgrupo> 
+            <!--Inicia Tema 2 Johan Pineda Ayala -->
+            <h1> Blog sobre el skate </h1>
+        </hgrupo>
+        
+        <p>
+            El skate en Juegos Olimpicos 
+        </p>
+
+    </body>
+</html>
