Correción de errores

--- a/root/mi_primer_tema.html
+++ b/root/mi_primer_tema.html
@@ -2,12 +2,12 @@
 <html lang="es">
     <head>
         <!-- Tema propuesto para el blog -->
-        <title> Física en la Formula 1 </title>
+        <title> Formula 1 </title>
     </head>
     <body> 
         <section>
             <header>
-                <h1> Formula 1 </h1>
+                <h1> Física en la Formula 1 </h1>
                 <h4></h4>   
             </header>
             <main> 
