--- a/propuestas.html
+++ b/propuestas.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
     <head>
+        <!-- 3 nov | @sergiortellez: falta meta, charset  --> 
         <title> Popuestas del blog </title>
     </head>
 
@@ -14,7 +15,7 @@
         <p>
             Las cosas mas emocionantes de la Formula 1
         </p>
-
+        <!-- 3 nov | @sergiortellez: Faltan subtemas, la descripción es demasiado corta. Tema aprobado  --> 
         <!-- Termina tema 1 Johan Pineda Ayala -->
         <hgrupo> 
             <!--Inicia Tema 2 Johan Pineda Ayala -->
@@ -24,6 +25,6 @@
         <p>
             El skate en Juegos Olimpicos 
         </p>
-
+        <!-- 3 nov | @sergiortellez: Faltan subtemas, la descripción es demasiado corta. Tema aprobado  --> 
     </body>
 </html>
