Termine la estructura basica de mis temas

--- a/eval.html
+++ b/eval.html
@@ -14,7 +14,7 @@
     Profesor:            0.5 pts de 1
 
     comentarios: Deben esforzarse más en sus paes, da la impresión que están haciendo el mínimo necesario para entregar. Falta entusiasmo. Se supone que son temas que les apasionan. 
-    La carpeta root no existe realmente sólo es el nombre que le damos a la carpeta que contiene nuestra repo, por eso la eliminé. Favor de corregir los errores que les marqué.
+    La carpeta root no existe realmente sólo es el nombre que le damos a la carpeta, que contiene nuestra repo, por eso la eliminé. Favor de corregir los errores que les marqué.
 ------------------------------------------------->
 <!-- Calificación: 8 pts de 11   -->
 <!------------------------------------------------->
