Primer tema terminado

--- a/root/mi_primer_tema.html
+++ b/root/mi_primer_tema.html
@@ -13,6 +13,21 @@
             <main> 
                 <!-- Sección principal del blog -->
             </main>
+            <!-- Inicia lista de temas de la Formula 1 -->
+            <nav>
+                <ul>
+                    <li>
+                        <a href="mi_segundo_tema.html"> Reglamento de la Formula 1 </a>
+                    </li>
+                    <li>
+                        <a href="mi_segundo_tema_j.html"> La agonía en las ultimas carreras</a>
+                    </li>
+                    <li>
+                        <a href="https://www.formula1.com/">Sitio official de la Formula 1 </a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Termina lista de temas de la Formula 1 -->
             <aside>
                 <!-- Información de la formula 1 y datos interesantes -->
             </aside>
