Segundo tema terminado

--- a/root/mi_segundo_tema.html
+++ b/root/mi_segundo_tema.html
@@ -7,13 +7,28 @@
         <section>
             <h1> Reglamento de la Formula 1 </h1>
             <!-- Día de la elavoración -->
-            <h3> </h3>
+            <h3> Reglamento de la Formula 1 </h3>
+            <a href="mi_primer_tema.html"> Pagina principal </a>
         </section>
         <section>
             <main> 
                 <!-- Contendio principal -->
             </main>
         </section>
+        <!-- Inicia barra de navegaciones -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://www.fia.com/es/estatutos-y-reglamento-interno-de-la-fia"> Reglamento de la Fia </a>
+                </li>
+                <li>
+                    <a href="https://www.fia.com/"> Pagina de la Fia </a>
+                </li>
+                <li>
+                    <a href="https://formula1.lne.es/clasificacion-f1/nuevas-reglas.html"> Reglamento nuevo de la Fia</a>
+                </li>
+            </ul>
+        </nav>
         <section>
             <footer>
                 <!-- pie de pagina -->
