@eval, added: pae2, pae3

--- a/eval.html
+++ b/eval.html
@@ -1,3 +1,6 @@
+<!-- Johan Pineda Ayala -->
+<!-- Emiliano Núñez Pantoja -->
+
 <!------------------------------------------------->
 <!-- Evaluación PAE-1 (a tiempo) 3 nov-->
 <!-------------------------------------------------
@@ -17,4 +20,39 @@
     La carpeta root no existe realmente sólo es el nombre que le damos a la carpeta, que contiene nuestra repo, por eso la eliminé. Favor de corregir los errores que les marqué.
 ------------------------------------------------->
 <!-- Calificación: 8 pts de 11   -->
+<!------------------------------------------------->
+
+<!-- 23 nov | @sergiortellez: nuevamente tienen la carpeta root que ya les había corregido la semana anterior, esta vez les costará puntos. Tampoco revisaron los comentarios que dejé en index.html  -->
+
+<!-- 23 nov | @sergiortellez: los archivos no deben llamarse "mi_primer_tema.html" deben llamarse como se llama el tema e.g "formula_uno.html"  -->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-2 (a tiempo) 23 nov-->
+<!-------------------------------------------------
+    Código:              1.5 pts de 3 
+    Contenido:           1.5 pts de 3
+
+    Seguimiento 
+    de instrucciones:    0 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          0 pts de 1
+    Criterio del
+    Profesor:            0 pts de 1
+
+    comentarios: Emiliano, no estás trabajando. ¿Qué está pasando? de no mejorar notablemente será dificil para ustedes aprobar el periodo.
+------------------------------------------------->
+<!-- Calificación: 4.5 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-4 (Fuera de tiempo) 23 nov-->
+<!-------------------------------------------------
+Código:              0 pts de 4 
+Contenido:           0 pts de 2
+
+Comentarios: Pae no entregado, están poniendo en grave peligro su futuro en la materia.
+------------------------------------------------->
+<!-- Calificación: 0 pts de 6       -->
 <!------------------------------------------------->
