correccion de errores check point johan

--- a/index.html
+++ b/index.html
@@ -1,37 +1,18 @@
+<!--Nuñez Pantoja Emiliano, Pineda Ayala Johan Mauricio -->
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <title> Formula 1</title>
+    <title>BLOG DEL MUNDO </title>
 </head>
+    <meta charset="UTF-8">
 
 <body>
     <!-- ---- @sergiortellez | 3 nov ----  --
             esta información debería estar en propuestas.html    
         --  Penalización: 0.5 -> seguimiento de instrucciones -->
-
-    <!-- Tema 1 Emiliano Núñez Pantoja -->
-    <hgrupo>
-        <h1> Blog de la Formula 1 </h1>
-        <h3> Lo mas nuevo de la Formula 1 </h3>
-    </hgrupo>
-    <p>
-        Lo mas nuevo de la Formula 1, y datos muy importantes en el mundo del automovilismo
-    </p>
-    <!-- 3 nov | @sergiortellez: tema aprobado  -->
-    <!--Termina Tema 1 Emiliano Núñez Pantoja-->
-
-    <!--Tema 2 Emiliano Núñez Pantoja -->
-    <hgroup>
-        <h1> Diseños de los carros Formula 1</h1>
-    </hgroup>
-    <p>
-        Los carros de Formula 1 tienes que cambiar cad cierto tiempo el diseño de su auto
-    </p>
-    <!-- 3 nov | @sergiortellez: Este en realidad es un subtema del tema anterior, ¿podrías escoger algo más? La idea es hacer 2 blogs  -->
-    <!--Termina Tema 2 Emiliano Núñez Pantoja -->
-
-
+ Bienvenido al mejor blog.
+ Enterate de lo nuevo de la formula 1 y el skate.
+    
 </body>
 
 </html>
