--- a/propuestas.html
+++ b/propuestas.html
@@ -26,5 +26,26 @@
             El skate en Juegos Olimpicos 
         </p>
         <!-- 3 nov | @sergiortellez: Faltan subtemas, la descripción es demasiado corta. Tema aprobado  --> 
+  
+       <!-- Tema 1 Emiliano Núñez Pantoja -->
+    <hgrupo>
+        <h1> Blog de la Formula 1 </h1>
+        <h3> Lo mas nuevo de la Formula 1 </h3>
+    </hgrupo>
+    <p>
+        Lo mas nuevo de la Formula 1, y datos muy importantes en el mundo del automovilismo
+    </p>
+    <!-- 3 nov | @sergiortellez: tema aprobado  -->
+    <!--Termina Tema 1 Emiliano Núñez Pantoja-->
+
+    <!--Tema 2 Emiliano Núñez Pantoja -->
+    <hgroup>
+        <h1> Diseños de los carros Formula 1</h1>
+    </hgroup>
+    <p>
+        Los carros de Formula 1 tienes que cambiar cad cierto tiempo el diseño de su auto
+    </p>
+    <!-- 3 nov | @sergiortellez: Este en realidad es un subtema del tema anterior, ¿podrías escoger algo más? La idea es hacer 2 blogs  -->
+    <!--Termina Tema 2 Emiliano Núñez Pantoja -->
     </body>
 </html>
