--- a/formula_1.html
+++ b/formula_1.html
@@ -43,7 +43,8 @@
                 <header>
                     <hgroup>
                         <!-- Titulo del articulo-->
-                        <2>Verstapen y Hamilton en plena batalla por el campeonato</2>
+                         <h2> <img src="images/campeonato.png" alt="bolido f1" height="35px" width="auto">Verstapen y Hamilton en plena batalla por el campeonato</h2> 
+
                         <!--fecha en la que se escribe el articulo -->
                         <h4>12/11/2021</h4>
                     </hgroup>
@@ -88,32 +89,28 @@
                        <article>
                           <header>
                                <hgroup>
-                                  <!-- Título del artículo -->
-                                  <h2>Ranking de ejemplo</h2>
-                                  <!-- Fecha en la que se escribió el artículo -->
-                                  <h4>dd/mes/aa</h4>
+                                   <!--inicia raking-->
+                                   <h2> <img src="images/brasil.png" alt="Brasil" height="35px" width="auto"> Los ultimos 10 Ganadores del GP de Brasil.</h2>
+                                   <!--fecha en la que se escribio el articulo-->
+                                  <h4>19/11/2021</h4>
                                </hgroup>
                           </header>
                          <!-- inicia contenido del artículo -->
                          <div>
-                          <!--inicia raking-->
-                         <h2>Los ultimos 10 Ganadores del GP de Brasil.</h2>
-                         <!--fecha en la que se escribio el articulo-->
-                         <h4>19/11/2021</h4>
-                         <ol reversed>
-                          <li> 2011 - Mark Webber</li>
-                          <li> 2012 - Jenson Button</li>
-                          <li> 2013 - Sebastian Vettel</li>
-                          <li> 2014 - Nico Rosberg</li>
-                          <li> 2015 -  Nico Rosberg</li>
-                          <li> 2016 - Lewis Hamilton</li>
-                          <li> 2017 - Sebastian Vettel </li>
-                          <li> 2018 - Lewis Hamilton </li>
-                          <li> 2019 - Max Verstapen </li>
-                          <li> 2021 - Lewis Hamilton</li>
-                         </ol>
-                         *en 2020 no se corrio el GP de Brasil por la pandemia del COVID-19*
-                         <!-- termina ranking-->
+                           <ol reversed>
+                             <li> 2011 - Mark Webber</li>
+                             <li> 2012 - Jenson Button</li>
+                             <li> 2013 - Sebastian Vettel</li>
+                             <li> 2014 - Nico Rosberg</li>
+                             <li> 2015 -  Nico Rosberg</li>
+                             <li> 2016 - Lewis Hamilton</li>
+                             <li> 2017 - Sebastian Vettel </li>
+                             <li> 2018 - Lewis Hamilton </li>
+                             <li> 2019 - Max Verstapen </li>
+                             <li> 2021 - Lewis Hamilton</li>
+                          </ol>
+                           *en 2020 no se corrio el GP de Brasil por la pandemia del COVID-19*
+                          <!-- termina ranking-->
                          </div>
                          <!-- Termina el contenido del articulo -->
                          <footer>
@@ -129,7 +126,7 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2>Sitios Oficiales verificados </h2>
+                        <h2> <img src="images/verificado.png" alt="verificados" height="35px" width="auto">Sitios Oficiales verificados </h2>
                         <!-- Fecha en al que se escribio el articulo-->
                         <h4>29/11/2021</h4>
                     </hgroup>
