--- a/skate_blog.html
+++ b/skate_blog.html
@@ -175,9 +175,28 @@
                    </footer>
                </article>
                 <!-- fin entrada: sitios oficiales verificados skate-->
-             
+            
 
-
+                <!--inicia entrada: video -->
+                <article>
+                    <header>
+                        <hgroup>
+                            <!--titulo del articulo-->
+                            <h2>El truco más basico de skate</h2>
+                            <figure>
+                                <iframe 
+                                width="560" height="315" 
+                                src="https://www.youtube.com/embed/cItLwzmwdlo" 
+                                title="YouTube video player" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <figcaption>Aprende a hacer un Ollie con R2Artur</figcaption>
+                            </figure>
+                            <h4>   Es un video en el cual se explica como se debe de realizar un ollie, algunas partes pueden ser dificiles pero eso es parte de la dificultad del truco </h4>
+                            <h4>Es un video muy bueno, en lo personal es bastante claro, me gusto este video debido a que a mi me ayudo a poder dominar el "Ollie"</h4>
+                        </hgroup>
+                    </header>
+                </article>
+                <!--termina entrada: video-->
         </main>
         <!-- termina aquí contenido principal -->
 
