--- a/formula_1.html
+++ b/formula_1.html
@@ -150,7 +150,27 @@
               </footer>
            </article>
     <!-- fin entrada: sitios oficiales verificados -->
-
+   
+   
+    <!--inicia entrada: video -->
+    <article>
+        <header>
+            <hgroup>
+                <!--titulo del articulo-->
+                <h2></h2>
+                <figure>
+                    <iframe width="560" height="300" 
+                    src="https://www.youtube.com/embed/R_5pAVbwCIw" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <figcaption>Resumen del GP de Brasil</figcaption>
+                </figure>
+                <h4>   Es un video en el cual se explica como se debe de realizar un ollie, algunas partes pueden ser dificiles pero eso es parte de la dificultad del truco </h4>
+                <h4>Es un video muy bueno, en lo personal es bastante claro, me gusto este video debido a que a mi me ayudo a poder dominar el "Ollie"</h4>
+            </hgroup>
+        </header>
+    </article>
+    <!--termina entrada: video-->
 
 
  </main>
