--- a/formula_1.html
+++ b/formula_1.html
@@ -165,8 +165,8 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <figcaption>Resumen del GP de Brasil</figcaption>
                 </figure>
-                <h4>   Es un video en el cual se explica como se debe de realizar un ollie, algunas partes pueden ser dificiles pero eso es parte de la dificultad del truco </h4>
-                <h4>Es un video muy bueno, en lo personal es bastante claro, me gusto este video debido a que a mi me ayudo a poder dominar el "Ollie"</h4>
+                <h4>Es un video donde se resume lo que paso en el fin de semana en el GP de Brasil, ademas se hace un analisisi de lo mas importante y las estrategia de las escuderias</h4>
+                <h4>Es un video muy bueno, en lo personal es un contenido sano, e informativo, es un contenido que suelo consumir por la buena forma de narrar los hechos</h4>
             </hgroup>
         </header>
     </article>
