--- a/reglamento.html
+++ b/reglamento.html
@@ -32,7 +32,11 @@
                 La Federación Internacional del Automóvil (FIA) es uno de los rectores del deporte del automovilismo mas importantes, la FIA
                 son los encargados en hacer que se respetan las reglas de la Formula 1, ellos son los que les ponen una sanción a los pilotos 
                 cuando incumplen una regla.
-            </p> 
+            </p>
+            <figure>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0nsYGnDFdes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <figcaption> Resmumen basico de la "FIA"</figcaption>
+            </figure>
         </section>
         <!-- Termina primer tema -->
         <!-- Inicia segundo tema -->
@@ -62,6 +66,10 @@
                 Finalmente, el 19 de julio de 2017, el ente federativo decidió optar por el Halo para reforzar la seguridad de los pilotos de 
                 monoplazas y anunció que los F1 lo llevarían ya de manera obligatoria la siguiente temporada.
             </p>
+            <figure>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/w1AXuNDa4qE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <figcaption>Evolución de la seguirdad de la Fomrula 1</figcaption>
+            </figure>
         </section>
         <!-- Termina cuarto tema -->
         <footer>
