--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -8,7 +8,7 @@
     <body>
         <!-- Tema -->
         <header>
-            <h1> Formula 1 </h1>
+            <h1> <img src="images/Logo.png" alt="bolido f1" height="35px" width="auto"> Formula 1 </h1>
         </header>
         <!-- Empieza barra de navegaciones -->
         <aside>
