--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -8,7 +8,7 @@
     <body>
         <!-- Tema -->
         <header>
-            <h1> <img src="images/Logo.png" alt="bolido f1" height="35px" width="auto"> Formula 1 </h1>
+            <h1><img src="images/Logo.png" alt="bolido f1" height="35px" width="auto"> Formula 1 </h1>
         </header>
         <!-- Empieza barra de navegaciones -->
         <aside>
@@ -33,7 +33,7 @@
         <!-- Termina barra de navegaciones --> 
         <!-- Inicia primer tema -->
         <section>
-            <h3> ¿Como es la Formula 1? </h3>
+            <h3><img src="images/conductor.png" alt="bolido f1" height="35px" width="auto">¿Como es la Formula 1? </h3>
             <p>
                 La "Formula 1" es una de las competencias mas importantes en el mundo del automovilismo, en donde compiten los mejores corredores del mundo,
                 en donde participan 10 escuderias, cada escuderia cuenta con dos pilotos. El campeonato de Fórmula 1 comenzó en 1950 y ha evolucionado al grado 
