--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -57,7 +57,7 @@
         <!-- Termina segundo tema -->
         <!-- Inicia tercer tema -->
         <div>
-            <h3> Pilotos </h3>
+            <h3><img src="images/coche-de-competicion.png" alt="bolido f1" height="35px" width="auto">Pilotos </h3>
             <p>
                 Cada escudería compite en carrera con dos pilotos, y disponen de otros tantos probadores, aunque todas cuentan con una multitud de ingenieros, 
                 que realizan un trabajo casi tan importante como el de los pilotos:
