--- a/reglamento.html
+++ b/reglamento.html
@@ -27,7 +27,7 @@
         <!-- termina barra de navegaciones -->
         <!-- Inica primer tema -->
         <section>
-            <h3> ¿Que es la FIA? </h3>
+            <h3><img src="images/trofeo.png" alt="bolido f1" height="35px" width="auto"> ¿Que es la FIA? </h3>
             <p>
                 La Federación Internacional del Automóvil (FIA) es uno de los rectores del deporte del automovilismo mas importantes, la FIA
                 son los encargados en hacer que se respetan las reglas de la Formula 1, ellos son los que les ponen una sanción a los pilotos 
@@ -61,7 +61,7 @@
         <!-- Termina tercer tema -->
         <!-- Inicia cuarto tema -->
         <section>
-            <h3> ¿Cuando implementaron el "HALO"? </h3>
+            <h3><img src="images/llave-de-torsion.png" alt="bolido f1" height="35px" width="auto"> ¿Cuando implementaron el "HALO"? </h3>
             <p>
                 Finalmente, el 19 de julio de 2017, el ente federativo decidió optar por el Halo para reforzar la seguridad de los pilotos de 
                 monoplazas y anunció que los F1 lo llevarían ya de manera obligatoria la siguiente temporada.
