--- a/reglamento.html
+++ b/reglamento.html
@@ -8,7 +8,7 @@
     <body>
         <!-- Tema  -->
         <section>
-            <h1> Reglamento y seguridad de la Formula 1 </h1>
+            <h1><img src="images/formula.png" alt="bolido f1" height="35px" width="auto"> Reglamento y seguridad de la Formula 1 </h1>
         </section>
         <!-- barra de navegaciones -->
         <nav>
