--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -35,9 +35,7 @@
         <section>
             <h3><img src="images/conductor.png" alt="bolido f1" height="35px" width="auto">¿Como es la Formula 1? </h3>
             <p>
-                La "Formula 1" es una de las competencias mas importantes en el mundo del automovilismo, en donde compiten los mejores corredores del mundo,
-                en donde participan 10 escuderias, cada escuderia cuenta con dos pilotos. El campeonato de Fórmula 1 comenzó en 1950 y ha evolucionado al grado 
-                de ser uno de los pocos deportes que se practica en más de 20 ciudades alrededor del mundo.
+                La "Formula 1" es una de las competencias mas importantes en el mundo del automovilismo, en donde compiten los mejores corredores del mundo, en donde participan 10 escuderias, cada escuderia cuenta con dos pilotos. El campeonato de Fórmula 1 comenzó en 1950 y ha evolucionado al grado de ser uno de los pocos deportes que se practica en más de 20 ciudades alrededor del mundo.
             </p>
             <figure>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/T3LOaEd0GsI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -49,9 +47,7 @@
         <section>
             <h3> ¿Cuando se fundo la Formula 1?</h3>
             <p>
-                La Formula 1 inicio en el año de 1950 en el que participaron las escuderias: Ferrari, Alfa Romeo y Maserati. Algunas fueron reemplazadas por 
-                otras nuevas como McLaren, Williams, Red Bull y otras que volvieron como Mercedes que se han alzado varias veces con el Campeonato Mundial de 
-                Constructores.
+                La Formula 1 inicio en el año de 1950 en el que participaron las escuderias: Ferrari, Alfa Romeo y Maserati. Algunas fueron reemplazadas por otras nuevas como McLaren, Williams, Red Bull y otras que volvieron como Mercedes que se han alzado varias veces con el Campeonato Mundial de Constructores.
             </p>
         </section>
         <!-- Termina segundo tema -->
@@ -100,10 +96,7 @@
         <section>
             <h3> ¿Como se corre el gran premio de Formula 1?</h3>
             <p>
-                Cada fin de semana la GP (Gran Premio) divide en tres partes. Los viernes a primera hora se realiza la prueba en donde checan si los automoviles
-                no cuentan con ningun tipo de problemas, y para los pilotos hagan un reconocimiento de la pista. En el segundo día (Sabado) se realiza la clasificación,
-                en donde los corredores lo mas rapido posible, el piloto con el tiempo recorrido mas corto sera el primero en salir de la parrilla y así sucesivamente.
-                El tercer día (domingo) se juega la carrera. 
+                Cada fin de semana la GP (Gran Premio) divide en tres partes. Los viernes a primera hora se realiza la prueba en donde checan si los automoviles no cuentan con ningun tipo de problemas, y para los pilotos hagan un reconocimiento de la pista. En el segundo día (Sabado) se realiza la clasificación, en donde los corredores lo mas rapido posible, el piloto con el tiempo recorrido mas corto sera el primero en salir de la parrilla y así sucesivamente.El tercer día (domingo) se juega la carrera. 
             </p>
         </section>
         <!-- Termina tercer tema -->
