PAE 5 primer tema

--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -101,7 +101,16 @@
         </section>
         <!-- Termina tercer tema -->
         <footer>
-            <a href="https://www.formula1.com/">Pagina oficial de la formula 1 </a>
+            <!-- Datos del autor -->
+            <div> 
+                <span> Emiliano Núñez Pantoja </span> < href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
+            </div>
+            <!-- Fin de los datos del autor -->
+            <!-- Bibliografía -->
+            <blockquote>
+                <p> Cita correctamente hecha </p>
+            </blockquote>
+            <!-- fin de la bibliograía -->
         </footer>
     </body>
     <!-- Termina mi blog -->
