--- a/reglamento.html
+++ b/reglamento.html
@@ -72,6 +72,16 @@
             </figure>
         </section>
         <!-- Termina cuarto tema -->
+        <!-- Datos del autor -->
+        <div> 
+            <span> Emiliano Núñez Pantoja </span> < href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
+        </div>
+        <!-- Fin de los datos del autor -->
+        <!-- Bibliografía -->
+        <blockquote>
+            <p> Cita correctamente hecha </p>
+        </blockquote>
+        <!-- fin de la bibliograía -->
         <footer>
             <a href="https://www.redbull.com/pe-es/redbullracing/bulls-guide-la-seguridad-operativa-en-la-formula-1">Guia de seguridad</a>
         </footer>
