Cambios de codigo

--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -96,7 +96,7 @@
         <section>
             <h3> ¿Como se corre el gran premio de Formula 1?</h3>
             <p>
-                Cada fin de semana la GP (Gran Premio) divide en tres partes. Los viernes a primera hora se realiza la prueba en donde checan si los automoviles no cuentan con ningun tipo de problemas, y para los pilotos hagan un reconocimiento de la pista. En el segundo día (Sabado) se realiza la clasificación, en donde los corredores lo mas rapido posible, el piloto con el tiempo recorrido mas corto sera el primero en salir de la parrilla y así sucesivamente.El tercer día (domingo) se juega la carrera. 
+                Cada fin de semana la GP <strong>(Gran Premio)</strong> divide en tres partes. Los viernes a primera hora se realiza la prueba en donde checan si los automoviles no cuentan con ningun tipo de problemas, y para los pilotos hagan un reconocimiento de la pista. En el segundo día <strong>(Sabado)</strong> se realiza la clasificación, en donde los corredores lo mas rapido posible, el piloto con el tiempo recorrido mas corto sera el primero en salir de la parrilla y así sucesivamente.El tercer día <strong>(domingo)</strong> se juega la carrera. 
             </p>
         </section>
         <!-- Termina tercer tema -->
