--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -102,7 +102,7 @@
         <!-- Termina tercer tema -->
         <!-- Datos del autor -->
         <div> 
-            <span> Emiliano Núñez Pantoja </span> < href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
+            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
         </div>
         <!-- Fin de los datos del autor -->
         <!-- Bibliografía -->
