--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -47,7 +47,7 @@
         <section>
             <h3> ¿Cuando se fundo la Formula 1?</h3>
             <p>
-                La Formula 1 inicio en el año de 1950 en el que participaron las escuderias: Ferrari, Alfa Romeo y Maserati. Algunas fueron reemplazadas por otras nuevas como McLaren, Williams, Red Bull y otras que volvieron como Mercedes que se han alzado varias veces con el Campeonato Mundial de Constructores.
+                La Formula 1 <strong>inicio en el año de 1950</strong> en el que participaron las escuderias: <strong>Ferrari, Alfa Romeo y Maserati.</strong> Algunas fueron reemplazadas por otras nuevas como McLaren, Williams, Red Bull y otras que volvieron como Mercedes que se han alzado varias veces con el Campeonato Mundial de Constructores.
             </p>
         </section>
         <!-- Termina segundo tema -->
