--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -100,6 +100,13 @@
             </p>
         </section>
         <!-- Termina tercer tema -->
+        <nav>
+            <ol>
+                <li>
+                    <a href="Investigación2e.html"> Investigación de la Formula 1 </a>
+                </li>
+            </ol>
+        </nav>
         <!-- Datos del autor -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
