Datos del autor

--- a/Investigaciones_e.html
+++ b/Investigaciones_e.html
@@ -32,5 +32,15 @@
                 Muchos estudios se centran en magnificar los beneficios esperados, ignorando los posibles impactos negativos sobre los residentes de las localidades que acogen estos eventos 
             </p>
         </section>
+        <!-- Datos del autor -->
+        <div> 
+            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
+        </div>
+        <!-- Fin de los datos del autor -->
+        <!-- Bibliografía -->
+        <blockquote>
+            <p> Cita correctamente hecha </p>
+        </blockquote>
+        <!-- fin de la bibliograía -->
     </body>
 </html>
