--- a/reglamento.html
+++ b/reglamento.html
@@ -72,6 +72,13 @@
             </figure>
         </section>
         <!-- Termina cuarto tema -->
+        <nav>
+            <ol>
+                <li>
+                    <a href="Investigación2e.html"> Investigación del reglamento</a>
+                </li>
+            </ol>
+        </nav>
         <!-- Datos del autor -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
