--- a/Investigación2e.html
+++ b/Investigación2e.html
@@ -61,7 +61,7 @@
         <!-- termina las fuentes de información -->
         <!-- Datos del autor -->
         <div> 
-            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
+            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a>
         </div>
         <!-- Fin de los datos del autor -->
         <!-- Bibliografía -->
