--- a/reglamento.html
+++ b/reglamento.html
@@ -81,7 +81,7 @@
         </nav>
         <!-- Datos del autor -->
         <div> 
-            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano en mi_red_social</a>
+            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano </a>
         </div>
         <!-- Fin de los datos del autor -->
         <!-- Bibliografía -->
