fuentes de infotmación

--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -102,9 +102,19 @@
         <!-- Termina tercer tema -->
         <nav>
             <ol>
+                <!-- investigación del tema -->
                 <li>
                     <a href="Investigación2e.html"> Investigación de la Formula 1 </a>
                 </li>
+            </ol>
+        </nav>
+        <!-- fuentes de información -->
+        <nav>
+            <ol>
+               <li>
+                   <a href="https://www.redalyc.org/pdf/1630/163024659007.pdf">Gran premio GP </a>
+               </li>
+               <a href="https://www.netflix.com/watch/80239920?trackId=13752289"> Serie de Netlix</a>
             </ol>
         </nav>
         <!-- Datos del autor -->
