--- a/Investigaciones_e.html
+++ b/Investigaciones_e.html
@@ -32,6 +32,13 @@
                 Muchos estudios se centran en magnificar los beneficios esperados, ignorando los posibles impactos negativos sobre los residentes de las localidades que acogen estos eventos 
             </p>
         </section>
+        <nav>
+            <ol>
+                <li>
+                    <a href="Formula_1_.html">inicio </a>
+                </li>
+            </ol>
+        </nav>
         <!-- Datos del autor -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano </a>
