--- a/Investigación2e.html
+++ b/Investigación2e.html
@@ -59,6 +59,13 @@
             <a href="http://openaccess.uoc.edu/webapps/o2/bitstream/10609/42649/8/jrodriguezgomezTFG0615presentaci%c3%b3n.pdf"> Estadistica de la FIA </a>
         </div>
         <!-- termina las fuentes de información -->
+        <nav>
+            <ol>
+                <li>
+                    <a href="Formula_1_.html">Inicio </a>
+                </li>
+            </ol>
+        </nav>
         <!-- Datos del autor -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a>
