--- a/reglamento.html
+++ b/reglamento.html
@@ -79,6 +79,13 @@
                 </li>
             </ol>
         </nav>
+        <nav>
+            <ol>
+                <li>
+                    <a href="Formula_1_.html">Inicio </a>
+                </li>
+            </ol>
+        </nav>
         <!-- Datos del autor -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano </a>
