--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -114,7 +114,9 @@
                <li>
                    <a href="https://www.redalyc.org/pdf/1630/163024659007.pdf">Gran premio GP </a>
                </li>
-               <a href="https://www.netflix.com/watch/80239920?trackId=13752289"> Serie de Netlix</a>
+               <li>
+                   <a href="https://www.netflix.com/watch/80239920?trackId=13752289"> Serie de Netflix</a>
+               </li>
             </ol>
         </nav>
         <!-- Datos del autor -->
