--- a/formula_1.html
+++ b/formula_1.html
@@ -307,9 +307,15 @@
            
            <!--valores estadisticos-->
            <label>Contenidos: <meter value="60" min="0" max="180"></meter></label>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod tempora id quo 
-              error. Harum sint ad labore voluptates dolore? Maxime, quam! Veniam ex odit qui aspernatur inventore 
-              fugiat vero?
+           <p>El día de hoy hablaremos de como es que funciónan los bólidos de la Formula 1. Generalizaremos algunos puntos 
+             para centrarnos en como es su proceso de combustión y analizaremos que tipo de combustible necesitan los mismos 
+             para poder funconar correctamente, puesto que son autos diseñados especificamente para ser veloces y tener una 
+             velocidad punta. Por lo que todos los componentes deben ser de la mejor calidad posible. Bien, ahora conozcamos 
+             como funciona un Formula 1. AL igual que los coches de calle los Formula 1 utilizan un motor de combustión interna 
+             es drcir que llevan a cabo un proceso de combustión como cualquier otro vehiculo de calle, pero cabe mencionar 
+             que en la máxima categoría del automovilismo, es decir la F1, se han presentado numerosos avances tecnologicos 
+             como lo son los motores hibrídos.
+
             </p>
            
             <!--segundo subtema -->
