@eval: se evaluó el pae5

--- a/eval.html
+++ b/eval.html
@@ -56,3 +56,55 @@ Comentarios: Pae no entregado, están poniendo en grave peligro su futuro en la 
 ------------------------------------------------->
 <!-- Calificación: 0 pts de 6       -->
 <!------------------------------------------------->
+
+<!-- 13 ene | @sergiortellez: Estoy detectando una disparidad en el equipo, Johan tiene dos blogs completos pero Emiliano no, tendré que calificar por sseparado. Se recuperaron bien del PAE 3  del PAE 2, modificaré las calificaciones de esos 
+
+PAE 2: 8.5
+PAE 3: 8.5
+-->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-4 (a tiempo) 13 ene-->
+<!-------------------------------------------------
+    Código:              dif pts de 3 
+    Contenido:           dif pts de 3
+
+    Seguimiento 
+    de instrucciones:    dif pts de 1.5
+    Orden:               dif pts de 1.5
+
+    Corrección 
+    de errores:          dif pts de 1
+    Criterio del
+    Profesor:            0 pts de 1
+
+    comentarios: Tienen trabajo muy dispar no me queda máss remedio que calificar diferente porque ssi no afectaría mucho a Johan. 
+    Emiliano: tienes los videos, pero tus entradas no están integradas a un blog, te di las repsuestas a los PAEs anteriores en el checkpoint pero aún así no completasste el blog. Tu calificación es 6. 
+    Johan: Tienes un blog completo y casi perfecto, pero no hay coresponsabilidad con tu compañero. Esto no es un equipo. Tu calificación es 8. 
+------------------------------------------------->
+<!-- Calificación: dif pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-5 (a tiempo) 13 ene-->
+<!-------------------------------------------------
+    Código:              dif pts de 3 
+    Contenido:           dif pts de 3
+
+    Seguimiento 
+    de instrucciones:    dif pts de 1.5
+    Orden:               dif pts de 1.5
+
+    Corrección 
+    de errores:          dif pts de 1
+    Criterio del
+    Profesor:            0 pts de 1
+
+    comentarios: misma situación que el PAE anterior
+    Emiliano: no hiciste el trabajo de este PAE, tu calificación es 0. 
+    Johan: Tu investigación está muy  incompleta y repetiste el mismo código para tus dos temas y no lo modificaste. Tu calificación es 6. 
+------------------------------------------------->
+<!-- Calificación: dif pts de 11   -->
+<!------------------------------------------------->
+
+<!-- 13 ene | @sergiortellez: Por favor pidan una reunión conmigo.  -->
